# hash_finder

./: Cargo.toml  README.md
src/: args.rs  hash.rs  main.rs
src/hash/: tests.rs
