[package]
name = "hash_finder"
version = "0.1.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "A program that lets you find F amount of hashes with N amount of trailing zeros, with the hash seed on the left."
readme = "README.md"
homepage = "https://github.com/Axlefublr/hash_finder"
repository = "https://github.com/Axlefublr/hash_finder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
hex = "0.4.3"
num_cpus = "1.16.0"
ring = "0.16.20"
